[gd_scene load_steps=39 format=3 uid="uid://hugwq757olf5"]

[ext_resource type="Texture2D" uid="uid://b5j26td05468y" path="res://Recursos/Mensajes y Controles/hoja.png" id="1_j75yu"]
[ext_resource type="FontFile" uid="uid://dr8yvckycxwa3" path="res://Recursos/Letras/Born2bSportyV2.ttf" id="2_genl7"]
[ext_resource type="Texture2D" uid="uid://c03ob73mndsvt" path="res://Recursos/Mensajes y Controles/arrowDown.png" id="3_apn5n"]
[ext_resource type="Texture2D" uid="uid://cnkr41i5bpdua" path="res://Recursos/Personajes/FredsSide.png" id="4_ddxcu"]
[ext_resource type="Texture2D" uid="uid://bvyv6ql57a2mb" path="res://Recursos/Enemigos/Seagull_fly.png" id="5_t5ju1"]
[ext_resource type="Texture2D" uid="uid://dvxiri4ybfrkp" path="res://Recursos/Mensajes y Controles/arrowRight.png" id="6_yfau0"]
[ext_resource type="Texture2D" uid="uid://dord2g8pa76sg" path="res://Recursos/Fondos/Titles-sheet/fish-assets.png" id="7_a7fyq"]
[ext_resource type="Texture2D" uid="uid://qk5iog65is64" path="res://Recursos/Mensajes y Controles/emoty.png" id="8_53hbp"]
[ext_resource type="Texture2D" uid="uid://bsvx5xj1yxax5" path="res://Recursos/Mensajes y Controles/arrowUp.png" id="9_xpnbk"]
[ext_resource type="Texture2D" uid="uid://cq8lb5byqk8tm" path="res://Recursos/Enemigos/crab.png" id="10_q8hat"]
[ext_resource type="Texture2D" uid="uid://b0reymme8usta" path="res://Recursos/Enemigos/crab2.png" id="11_r7xx0"]
[ext_resource type="Texture2D" uid="uid://dwg76cw6ggska" path="res://Recursos/Extras/fishTile_046.png" id="12_kbc46"]
[ext_resource type="Texture2D" uid="uid://lf2rpimark1n" path="res://Recursos/Extras/fishTile_050.png" id="13_in05v"]
[ext_resource type="Theme" uid="uid://coood86movgp4" path="res://Recursos/Letras/BtnsColor.tres" id="14_v3khk"]
[ext_resource type="Script" path="res://InstructionBtns.gd" id="14_vgwdi"]
[ext_resource type="PackedScene" uid="uid://njew7k3160gk" path="res://release.tscn" id="15_ivr5d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d5cqp"]
atlas = ExtResource("3_apn5n")
region = Rect2(0, 0, 19, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqb23"]
atlas = ExtResource("3_apn5n")
region = Rect2(19, 0, 19, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq087"]
atlas = ExtResource("3_apn5n")
region = Rect2(38, 0, 19, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_et0de"]
atlas = ExtResource("4_ddxcu")
region = Rect2(134, 0, 134, 102)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfy0y"]
atlas = ExtResource("5_t5ju1")
region = Rect2(0, 0, 282, 294)

[sub_resource type="AtlasTexture" id="AtlasTexture_m241j"]
atlas = ExtResource("5_t5ju1")
region = Rect2(282, 0, 282, 294)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmb6h"]
atlas = ExtResource("5_t5ju1")
region = Rect2(564, 0, 282, 294)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbm2a"]
atlas = ExtResource("6_yfau0")
region = Rect2(0, 0, 19, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_gy6rh"]
atlas = ExtResource("6_yfau0")
region = Rect2(19, 0, 19, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjqw3"]
atlas = ExtResource("6_yfau0")
region = Rect2(38, 0, 19, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7p08"]
atlas = ExtResource("7_a7fyq")
region = Rect2(640, 256, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yq5f0"]
atlas = ExtResource("8_53hbp")
region = Rect2(0, 0, 41, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_f02ac"]
atlas = ExtResource("8_53hbp")
region = Rect2(41, 0, 41, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_kefnd"]
atlas = ExtResource("8_53hbp")
region = Rect2(82, 0, 41, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fq6q"]
atlas = ExtResource("9_xpnbk")
region = Rect2(0, 0, 19, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu7ku"]
atlas = ExtResource("9_xpnbk")
region = Rect2(19, 0, 19, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hgoi"]
atlas = ExtResource("9_xpnbk")
region = Rect2(38, 0, 19, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_stijy"]
atlas = ExtResource("10_q8hat")
region = Rect2(0, 0, 761, 466)

[sub_resource type="AtlasTexture" id="AtlasTexture_elyjg"]
atlas = ExtResource("11_r7xx0")
region = Rect2(0, 0, 761, 466)

[sub_resource type="AtlasTexture" id="AtlasTexture_70fyh"]
atlas = ExtResource("12_kbc46")
region = Rect2(0, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv6ht"]
atlas = ExtResource("13_in05v")
region = Rect2(0, 32, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pmrc2"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_d5cqp")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_wqb23")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_vq087")
}],
"loop": true,
"name": &"Down",
"speed": 6.0
}, {
"frames": [{
"duration": 12.0,
"texture": SubResource("AtlasTexture_et0de")
}],
"loop": true,
"name": &"Fred",
"speed": 6.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_tfy0y")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_m241j")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_tmb6h")
}],
"loop": true,
"name": &"Gaviota",
"speed": 6.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_pbm2a")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_gy6rh")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_qjqw3")
}],
"loop": true,
"name": &"Right",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7p08")
}],
"loop": true,
"name": &"Rocks",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_yq5f0")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_f02ac")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_kefnd")
}],
"loop": true,
"name": &"Space",
"speed": 6.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_1fq6q")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_qu7ku")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_5hgoi")
}],
"loop": true,
"name": &"Up",
"speed": 6.0
}, {
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_stijy")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_elyjg")
}],
"loop": true,
"name": &"crab",
"speed": 6.0
}, {
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_70fyh")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_lv6ht")
}],
"loop": true,
"name": &"plant",
"speed": 6.0
}]

[node name="Node2D" type="Node2D"]

[node name="table" type="ColorRect" parent="."]
offset_left = -33.0
offset_top = -21.0
offset_right = 1422.0
offset_bottom = 723.0
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(1, 0.894118, 0.709804, 1)

[node name="notebook" type="TextureRect" parent="."]
offset_left = 19.0
offset_top = 22.0
offset_right = 1048.0
offset_bottom = 655.0
texture = ExtResource("1_j75yu")

[node name="Label" type="Label" parent="."]
offset_left = 171.0
offset_top = 76.0
offset_right = 412.0
offset_bottom = 130.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_genl7")
theme_override_font_sizes/font_size = 50
text = "Intrucciones."

[node name="Label2" type="Label" parent="."]
offset_left = 83.0
offset_top = 159.0
offset_right = 491.0
offset_bottom = 246.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_genl7")
theme_override_font_sizes/font_size = 25
text = "Tu deber es ayudar a Fred en su camino 
al mar. 



Para lograrlo, debes"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(377, 243)
sprite_frames = SubResource("SpriteFrames_pmrc2")
animation = &"Fred"

[node name="Label3" type="Label" parent="."]
offset_left = 100.0
offset_top = 363.0
offset_right = 485.0
offset_bottom = 392.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_genl7")
theme_override_font_sizes/font_size = 25
text = "1. Escapar de la gaviota que te persigue."

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(288, 485)
scale = Vector2(0.656028, 0.656028)
sprite_frames = SubResource("SpriteFrames_pmrc2")
animation = &"Gaviota"

[node name="Label4" type="Label" parent="."]
offset_left = 581.0
offset_top = 82.0
offset_right = 1033.0
offset_bottom = 140.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_genl7")
theme_override_font_sizes/font_size = 25
text = "2. Evitar los cangrejos, ya que 
restan velocidad."

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="."]
position = Vector2(847, 168)
scale = Vector2(0.270074, 0.270074)
sprite_frames = SubResource("SpriteFrames_pmrc2")
animation = &"crab"

[node name="Label5" type="Label" parent="."]
offset_left = 587.0
offset_top = 249.0
offset_right = 1039.0
offset_bottom = 307.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_genl7")
theme_override_font_sizes/font_size = 25
text = "3. Evitar los obstáculos para no perder 
velocidad. "

[node name="AnimatedSprite2D4" type="AnimatedSprite2D" parent="."]
position = Vector2(823, 315)
scale = Vector2(1.97879, 1.97879)
sprite_frames = SubResource("SpriteFrames_pmrc2")
animation = &"Rocks"

[node name="Label6" type="Label" parent="."]
offset_left = 580.0
offset_top = 426.0
offset_right = 1032.0
offset_bottom = 484.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_genl7")
theme_override_font_sizes/font_size = 25
text = "4. Comer todas las plantas posibles, ya que 
te ayudarán a ganar velocidad"

[node name="AnimatedSprite2D5" type="AnimatedSprite2D" parent="."]
position = Vector2(792, 531)
scale = Vector2(1.97879, 1.97879)
sprite_frames = SubResource("SpriteFrames_pmrc2")
animation = &"plant"

[node name="Botones" type="VBoxContainer" parent="."]
offset_left = 1089.0
offset_top = 443.0
offset_right = 1362.0
offset_bottom = 540.0
script = ExtResource("14_vgwdi")
Next = ExtResource("15_ivr5d")

[node name="Next" type="Button" parent="Botones"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("14_v3khk")
theme_override_fonts/font = ExtResource("2_genl7")
theme_override_font_sizes/font_size = 40
text = "Siguiente"

[node name="Start" type="Button" parent="Botones"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("14_v3khk")
theme_override_fonts/font = ExtResource("2_genl7")
theme_override_font_sizes/font_size = 40
text = "Comenzar"

[connection signal="pressed" from="Botones/Next" to="Botones" method="_on_next_pressed"]
[connection signal="pressed" from="Botones/Start" to="Botones" method="_on_start_pressed"]
